--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
         <h1><a href="https://www.gccaz.edu/"><img src="GCC logo.png.png" alt=""></a>TECH SHOP</h1>
         <nav>
             <ul>
-                <li><a href="index new.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Phone.html">Phone</a></li>
                 <li><a href="Laptop.html">Laptop</a></li>
                 <li><a href="Tablet.html">Tablet</a></li>
