--- a/Laptop.html
+++ b/Laptop.html
@@ -47,7 +47,7 @@
 
 
     <section class="product">
-        <img src="laptop samsung.jpg.crdownload" alt="Product 3">
+        <img src="laptop tebaru.jpg" alt="Product 3">
         <h2>Tebaru Samsung 2014</h2>
         <p>The best 21inch Laptop</p>
         <p class="price">$1,339.99</p>
